# sistemas-de-informacao

./: .gitignore  README.md
2-semestre/aed1-ACH2023/: README.md
3-semestre/coo-ACH2003/: README.md
3-semestre/oac1-ACH2034/: README.md
5-semestre/aed2-ACH2024/: README.md
6-semestre/mqam-ACH2036/: Cronograma pós-greve.xlsx  MQA2023 - Roteiro para a 4ª atividade Regressão Linear Múltipla.docx  MQA2023+-+Sites+interessantes+para+localizar+datasets.docx  MQA2023_grupo15_ANOVA_script.R  Roteiro para a atividade 1 de MQA2022.docx  Roteiro para apresentação da atividade 3 - ANOVA.docx  regres-linear.R  youtube-global.docx
6-semestre/redes-ACH2026/: 10CamEnlace1.ppt  11CamEnlace2.ppt
aed1-ACH2023/: README.md
aed1-ACH2023/ativ-semanal/: ativ-semanal-1.c  (+5 more)
aed2-ACH2024/: README.md
ativ-semanal/: semana-1.c  semana-11.c  semana-12.c  semana-14.c  semana-7.c  semana-8.c
aula-08/: variaveis-e-funcoes.c
aula-11/: condicionais.c
aula-12/: operadores-lógicos.c  testes-oper-log.c
bd2-ACH2025/: ListaExercíciosProva12024.doc  ProjetoSemestral2024BD2.doc  SILABDII2024.doc  ~$staExercíciosProva12024.doc
coo-ACH2003/: README.md
ia-ACH2016/: .gitignore
iaa-ACH2002/: README.md  ep1-8942937.c  ep1.c
iniciação-científica/VanGogh/: CMakeLists.txt  CMakeLists.txt.user.1c94177  CMakeLists.txt.user.bbbd9a7  Shader.h  VanGogh.cpp
iniciação-científica/VanGogh/Shaders/: BufferA.fs  BufferB.fs  BufferC.fs  BufferD.fs  Image.fs  Image.fs.frag  TextureViewer.fs.frag  VertexShader.vs  common.incl
ip-ach2001/: README.md
oac1-ACH2034/: README.md
so-ACH2044/: log03.txt
(+340 files in other folders)
